# 3D-Farm

./: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_db_setup.py
app/: main.py  streamlit_app.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: inventory.py  jobs.py  printers.py
app/core/: config.py
app/models/: inventory.py  job.py  printer.py
app/schemas/: inventory_schemas.py  job_schemas.py  printer_schemas.py
app/services/: failure_detection.py  inventory_service.py  job_service.py
app/services/utils/: detection_utils.py  job_utils.py
app/utils/: file_utils.py
data/seed/: printers.csv  spools.csv
scripts/: init_data.py  start_demo.sh
